<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Labb2 Complete</string>
    <string name="menu">Menu</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_activity_add_country">Add Country Activity</string>
    <string name="GoToList">GoToList</string>
    <string name="addNewCountry">Add</string>
    <string name="addStored">Stored Preferences</string>
    <string name="textViewHeader">Countries</string>
    <string name="buttonCountryDone">Done</string>
    <string name="buttonCountryCancel">Cancel</string>
     <string name="textViewYear">Year:</string>
      <string name="textViewCountry">Country:</string>
      <string name="textViewTitleText">Laboration 2 Activities</string>
    
     <string name="order_by_year_ASC">Year ASC</string>
      <string name="order_by_year_DESC">Year DESC</string>
    <string name="order_by_name_ASC">Country ASC</string>
    <string name="order_by_name_DESC">Country DESC</string>
    
      <!-- Settings -->
    <string name="title_activity_setting">Settings</string>
    <string name="background_color_settings">Change background color</string>
    <string name="size_settings">Change text size</string>
    
    
     <!-- Alarm Clock -->
    
    <string name="title_activity_alarm_clock">Alarm Clock</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="start_alarm">Set Alarm</string>
    <string name="stopAlarm">Stop Alarm</string>
    <string name="title_activity_start_stop_alarm">StartStopAlarm</string>
    
    

    <!-- Settings headers -->
    <string name="pref_update_setting">Update</string>
    <string name="pref_background_color">Background color</string>
    <string name="pref_size">Text size</string>

    <!-- Settings background color -->
    <string name="colorWhite">White</string>
    <string name="colorYellow">Yellow</string>
    <string name="colorPink">Pink</string>
    <string name="colorBlue">Blue</string>
    <string name="colorGreen">Green</string>
     
   
    
    
    

</resources>
