<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.labb1_countries.add_activity"
    android:id="@+id/relative"
     >

   <Button
        android:id="@+id/buttonCountryFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        
        android:text="@string/buttonCountryDone"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewYear"
        android:layout_below="@+id/textViewYear"
        android:ems="4"
        android:inputType="numberSigned" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewCountry"
        android:ems="10"
        android:focusable="true"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCountry"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/textViewYear"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCountry"
        android:layout_below="@+id/editTextYear"
        android:layout_marginTop="24dp"
        android:text="@string/textViewCountry"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCountryCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCountryFinish"
        android:layout_alignBottom="@+id/buttonCountryFinish"
        android:layout_toRightOf="@+id/editTextYear"
        
        android:onClick="onClick"
        
        android:text="@string/buttonCountryCancel"
        android:textStyle="bold" />

</RelativeLayout>